<?xml version="1.0" encoding="utf-8"?>


    <!-- SHARE APP -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            style="@style/intro_title"
            android:layout_marginTop="70dp"
            android:textSize="30sp"
            android:text="@string/help_us_title" />

        <TextView
            style="@style/intro_subtitle"
            android:text="@string/share_app_subtitle" />

        <TextView
            style="@style/intro_subtitle"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="@dimen/side_margin"
            android:text="@string/share_app_title" />


        <!--socials-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/side_margin"
            android:layout_marginStart="@dimen/side_margin" >

            <TextView
                style="@style/social"
                android:id="@+id/facebook"
                android:text="@string/facebook"
                android:textColor="@color/facebook"
                android:drawableStart="@drawable/ic_facebook" />

            <TextView
                style="@style/social"
                android:id="@+id/twitter"
                android:text="@string/twitter"
                android:textColor="@color/twitter"
                android:drawableStart="@drawable/ic_twitter" />

        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="@dimen/side_margin"
        android:layout_marginStart="@dimen/side_margin" >

            <TextView
                style="@style/social"
                android:id="@+id/linkedin"
                android:text="@string/linkedin"
                android:textColor="@color/linkedin"
                android:drawableStart="@drawable/ic_linkedin" />

            <TextView
                style="@style/social"
                android:id="@+id/messenger"
                android:text="@string/messenger"
                android:textColor="@color/messenger"
                android:drawableStart="@drawable/ic_messenger" />

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/side_margin"
            android:layout_marginStart="@dimen/side_margin" >

            <TextView
                style="@style/social"
                android:id="@+id/whatsapp"
                android:text="@string/whatsapp"
                android:textColor="@color/whatsapp"
                android:drawableStart="@drawable/ic_whatsapp" />

            <TextView
                style="@style/social"
                android:id="@+id/sms"
                android:text="@string/sms"
                android:textColor="@color/sms"
                android:drawableStart="@drawable/ic_sms" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/side_margin"
            android:layout_marginStart="@dimen/side_margin" >

            <TextView
                style="@style/social"
                android:id="@+id/mail"
                android:text="@string/email"
                android:textColor="@color/mail"
                android:drawableStart="@drawable/ic_mail" />

            <TextView
                style="@style/social"
                android:id="@+id/link"
                android:text="@string/link"
                android:textColor="@color/colorPrimary"
                android:drawableStart="@drawable/ic_link" />
        </LinearLayout>


    <!-- SHARE APP -->
    <Button style="@style/button_primary"
        android:id="@+id/button_share"
        android:layout_height="64dp"
        android:layout_width="match_parent"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:drawableStart="@drawable/ic_link_white"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:text="@string/share_app_title"/>

    </LinearLayout>