<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

    <!-- Title -->
        <com.example.coronavirusherdimmunity.utils.MyTextView
            style="@style/intro_title"
            android:layout_width="200dp"
            android:layout_marginTop="60dp"
            android:text="@string/how_it_works" />
        <com.example.coronavirusherdimmunity.utils.MyTextView
            style="@style/paragraph"
            android:layout_marginTop="@dimen/margin_left"
            android:text="@string/how_it_works_p0" />

        <View style="@style/divider" />

        <com.example.coronavirusherdimmunity.utils.MyTextView
            style="@style/question"
            android:text="@string/how_it_works_q1" />
        <com.example.coronavirusherdimmunity.utils.MyTextView
            style="@style/paragraph"
            android:layout_marginTop="20dp"
            android:text="@string/how_it_works_p1" />

        <View style="@style/divider" />

        <com.example.coronavirusherdimmunity.utils.MyTextView
            style="@style/question"
            android:text="@string/how_it_works_q2" />
        <com.example.coronavirusherdimmunity.utils.MyTextView
            style="@style/paragraph"
            android:layout_marginTop="20dp"
            android:text="@string/how_it_works_p2" />

        <View style="@style/divider" />

        <com.example.coronavirusherdimmunity.utils.MyTextView
            style="@style/question"
            android:text="@string/how_it_works_q1" />
        <com.example.coronavirusherdimmunity.utils.MyTextView
            style="@style/paragraph"
            android:layout_marginTop="20dp"
            android:text="@string/how_it_works_p1" />

        <View style="@style/divider" />

        <com.example.coronavirusherdimmunity.utils.MyTextView
            style="@style/question"
            android:text="@string/how_it_works_q2" />
        <com.example.coronavirusherdimmunity.utils.MyTextView
            style="@style/paragraph"
            android:layout_marginTop="20dp"
            android:text="@string/how_it_works_p2" />

    <!-- BUTTON -->
    <Button style="@style/button_primary"
        android:background="@drawable/ic_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_back" />

    </LinearLayout>

</ScrollView>
