<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <ScrollView
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/gray_background">


                <TextView
                    style="@style/intro_title"
                    android:layout_marginTop="50dp"
                    android:text="@string/hi"/>

                <TextView
                    style="@style/intro_title"
                    android:id="@+id/title"
                    android:textSize="35sp"
                    android:layout_marginTop="0dp" />

                <TextView
                    style="@style/intro_subtitle"
                    android:id="@+id/description"
                    android:layout_marginBottom="@dimen/side_margin"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginBottom="0dp"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/ic_letter_empty"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Read your messages" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >
                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/ic_question_mark"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/how_it_works_no_emoji" />
                    </LinearLayout>

                </LinearLayout>
<!--
                &lt;!&ndash; BUTTON &ndash;&gt;
                <Button style="@style/button_primary"
                    android:shadowColor="@color/white"
                    android:id="@+id/button_next"
                    android:layout_marginBottom="@dimen/side_margin"
                    android:paddingStart="@dimen/side_margin"
                    android:paddingEnd="@dimen/side_margin"
                    android:layout_gravity="center"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:text="@string/read_more" />
-->
                <ImageView
                    android:id="@+id/qr_code"
                    android:contentDescription="@string/qr_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="@dimen/side_margin"/>


            </LinearLayout>


        <!-- SHARE APP -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                style="@style/intro_title"
                android:layout_marginTop="70dp"
                android:textSize="35sp"
                android:text="@string/help_us_title" />

            <TextView
                style="@style/intro_subtitle"
                android:text="@string/share_app_subtitle" />


            <TextView
                style="@style/intro_subtitle"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="@dimen/side_margin"
                android:text="@string/share_app_title" />


            <!--socials-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/side_margin"
                android:layout_marginStart="@dimen/side_margin" >

                <Button
                    style="@style/social"
                    android:id="@+id/facebook"
                    android:text="@string/facebook"
                    android:textColor="@color/facebook"
                    android:drawableStart="@drawable/ic_facebook" />

                <Button
                    style="@style/social"
                    android:id="@+id/twitter"
                    android:text="@string/twitter"
                    android:textColor="@color/twitter"
                    android:drawableStart="@drawable/ic_twitter" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/side_margin"
                android:layout_marginStart="@dimen/side_margin" >

                <Button
                    style="@style/social"
                    android:id="@+id/linkedin"
                    android:text="@string/linkedin"
                    android:textColor="@color/linkedin"
                    android:drawableStart="@drawable/ic_linkedin" />

                <Button
                    style="@style/social"
                    android:id="@+id/messenger"
                    android:text="@string/messenger"
                    android:textColor="@color/messenger"
                    android:drawableStart="@drawable/ic_messenger" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/side_margin"
                android:layout_marginStart="@dimen/side_margin" >

                <Button
                    style="@style/social"
                    android:id="@+id/whatsapp"
                    android:text="@string/whatsapp"
                    android:textColor="@color/whatsapp"
                    android:drawableStart="@drawable/ic_whatsapp" />

                <Button
                    style="@style/social"
                    android:id="@+id/sms"
                    android:text="@string/sms"
                    android:textColor="@color/sms"
                    android:drawableStart="@drawable/ic_sms" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="@dimen/side_margin"
                android:layout_marginStart="@dimen/side_margin" >

                <Button
                    style="@style/social"
                    android:id="@+id/mail"
                    android:text="@string/email"
                    android:textColor="@color/mail"
                    android:drawableStart="@drawable/ic_mail" />

                <Button
                    style="@style/social"
                    android:id="@+id/other"
                    android:text="@string/other"
                    android:textColor="@color/colorPrimary"
                    android:drawableStart="@drawable/ic_link" />
            </LinearLayout>


        </LinearLayout>


            <Button style="@style/button_primary"
                android:id="@+id/how_it_works"
                android:layout_height="110dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:paddingBottom="12dp"
                android:background="@drawable/button_transparent"
                android:textColor="@color/colorPrimary"
                android:text="@string/how_it_works_no_emoji"/>



            <!-- FOR TESTING -->
            <Button
                android:id="@+id/openMonitoring"
                android:layout_width="0dp"
                android:layout_height="0dp" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
    android:id="@+id/footer"
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:background="@drawable/footer"
    android:layout_alignParentBottom="true">

    <TextView
        android:id="@+id/texthere2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="app is running..."
        android:textSize="15sp" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>


</RelativeLayout>