<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <ImageView
        style="@style/background_image"
        android:src="@drawable/ic_illustration_notifications" />
<!--
    <ImageView
        android:layout_width="14dp"
        android:layout_height="20dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="439dp"
        android:src="@drawable/emoji_check" />

    <ImageView
        android:layout_width="14dp"
        android:layout_height="20dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="498dp"
        android:src="@drawable/emoji_hospital" />-->

    <!-- Step 2 of 3 -->
    <TextView
        android:id="@+id/step_3_of_3"
        style="@style/steps_text"
        android:text="@string/step_3_of_3" />

    <!-- Location -->
    <TextView
        android:id="@+id/notifications"
        style="@style/intro_title"
        android:text="@string/notifications"
        android:layout_below="@id/step_3_of_3"/>


    <!-- To monitor more accurately your interactions we will
    ask you permission to use Location. It's anonymous. -->
    <TextView
        android:id="@+id/we_need_you_notif"
        style="@style/intro_subtitle"
        android:layout_below="@id/notifications"
        android:text="@string/we_need_you_notif" />

    <!-- BUTTON -->
    <Button style="@style/button_primary"
        android:shadowColor="@color/white"
        android:id="@+id/button_next"
        android:text="@string/give_notif"  />

</RelativeLayout>